--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Movie Poster</h2>
+    <img
+      class="moviePic"
+      src="https://images.unsplash.com/photo-1635805737707-575885ab0820?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bW92aWUlMjBwb3N0ZXJ8ZW58MHx8MHx8fDA%3D"
+      alt="Spyder Man Home Comming"
+    />
+    <h2 class="moviedes">Movie Description</h2>
+    <p class="movieDetail">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum
+      dolor sit amet consectetur adipisicing elit. Quibusdam ipsa fugiat sed
+      voluptates magnam sequi iure et voluptatibus? A hic debitis excepturi nemo
+      blanditiis soluta suscipit voluptatibus eius quod consequuntur!
+    </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
